--- a/Calis/requirements.txt
+++ b/Calis/requirements.txt
@@ -1,9 +1,13 @@
 appdirs==1.4.3
 astroid==2.3.3
+bcrypt==3.1.7
+cffi==1.14.0
 Click==7.0
 filelock==3.0.12
 Flask==1.1.1
+Flask-Bcrypt==0.7.1
 Flask-Login==0.5.0
+Flask-SQLAlchemy==2.4.1
 Flask-WTF==0.14.3
 importlib-metadata==1.5.0
 isort==4.3.21
@@ -12,12 +16,13 @@ Jinja2==2.11.1
 lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
 mccabe==0.6.1
+pycparser==2.20
 pylint==2.4.4
 six==1.12.0
+SQLAlchemy==1.3.15
 typed-ast==1.4.1
 virtualenv==20.0.1
 Werkzeug==1.0.0
 wrapt==1.11.2
 WTForms==2.2.1
 zipp==2.2.0
-Flask-SQLAlchemy==2.4.1
