--- a/Calis/requirements.txt
+++ b/Calis/requirements.txt
@@ -3,6 +3,7 @@ astroid==2.3.3
 bcrypt==3.1.7
 cffi==1.14.0
 Click==7.0
+cycler==0.10.0
 filelock==3.0.12
 Flask==1.1.1
 Flask-Bcrypt==0.7.1
@@ -13,11 +14,17 @@ importlib-metadata==1.5.0
 isort==4.3.21
 itsdangerous==1.1.0
 Jinja2==2.11.1
+kiwisolver==1.1.0
 lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
+matplotlib==3.2.1
 mccabe==0.6.1
+numpy==1.18.2
+Pillow==7.0.0
 pycparser==2.20
 pylint==2.4.4
+pyparsing==2.4.6
+python-dateutil==2.8.1
 six==1.12.0
 SQLAlchemy==1.3.15
 typed-ast==1.4.1
